style.css
/* Font */
@import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Young+Serif&display=swap");

:root {
  --strong-cyan: #26c0ab;
  --very-dark-cyan: #00494d;
  --dark-grayish-cyan: #5e7a7d;
  --grayish-cyan: #7f9c9f;
  --light-grayish-cyan: #c5e4e7;
  --very-light-grayish-cyan: #f4fafa;
  --white: #ffffff;

  --ff: "space mono", sans-serif;
  --fw-700: 700;
  --fs-input: 1.5rem;
  --fs-base: 1rem;
}

/*reset*/
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--ff);
  font-weight: var(--dark-grayish-cyan);
  font-size: var(--fs-base);
  color: var(--very-dark-cyan);
  background: var(--light-grayish-cyan);
  padding: 4rem 0;
}

button {
  font-size: var(--fs-input);
  color: var(--white);
  background-color: var(--very-dark-cyan);
  width: 100%;
  display: inline-block;
  border: none;
  padding: 1rem;
}

input[type="number"] {
  display: inline-block;
  width: 100%;
  color: var(--very-dark-cyan);
  border: 1px solid var(--strong-cyan);
  background-color: var(--very-light-grayish-cyan) !important;
  padding: 1rem;
  padding-left: 2rem;
  margin-bottom: 2rem;
  text-align: right;
}

#customInput {
  margin: 0;
}

input,
button {
  font: inherit;
  font-size: var(--fs-input);
  border-radius: 0.2rem;
}

/*Supportive/reusable classes*/
.grid {
  display: grid;
}

.flex {
  display: flex;
  align-items: center;
}

/*Typography text style*/
small {
  color: var(--dark-grayish-cyan);
}

.app-title {
  text-align: center;
  line-height: 1;
  margin: 0 0 2rem;
  letter-spacing: 1rem;
}

label {
  display: inline-block;
  color: var(--dark-grayish-cyan);
  margin-bottom: 1rem;
}

/*Ui elements*/
#billInput {
  background: url(images/icon-dollar.svg) no-repeat;
  background-position: 2% 50%; /*2% is on the x horizontal axis and 50% is y vertical axis*/
}

#peopleInput {
  background: url(images/icon-person.svg) no-repeat;
  background-position: 2% 50%; /*2% is on the x horizontal axis and 50% is y vertical axis*/
}

.reset-btn {
  text-transform: uppercase;
  background: var(--strong-cyan);
  color: var(--very-dark-cyan);
}

/*Layout styles*/
.tip-container {
  /* display: grid applied */
  gap: 2rem;
  padding: 1.5rem;
  border-top-left-radius: 2rem;
  border-top-right-radius: 2rem;
  background: var(--white);
}

.select-buttons {
  /* display: grid applied */
  grid-template-columns: repeat(2, 1fr);
  gap: 1rem;
}

.total-container {
  /* display: grid applied */
  /* gap: 3rem; */
  color: var(--white);
  background: var(--very-dark-cyan);
  padding: 1.75rem;
  border-radius: 1rem;
  margin-top: 3rem;
}

.total-amount,
.total-person {
  color: var(--strong-cyan);
  font-size: var(--fs-input);
}

.small-total {
  justify-content: space-between;
}

.small-total:nth-of-type(2) {
  margin-top: 2rem;
}

/*FEM footer */
.attribution {
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

/* Text styles */
.error {
  color: red;
  margin-bottom: 1rem;
  display: none;
}

.error-active {
  display: block;
}

.error-container {
  justify-content: space-between;
}

#peopleInput.error-active {
  border-color: red;
}

/* Media query */
@media screen and (min-width: 650px) {
  .tip-container {
    max-width: 60rem;
    margin-inline: auto;
    grid-template-columns: repeat(2, fr);
  }
  .select-buttons {
    grid-template-columns: repeat(3, fr);
  }

  .tip-container {
    border-radius: 2rem;
  }
}

